@@ -11,6 +11,15 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2026-01-31 Fri> *1.1.3*
+
+Added auto-scroll control for chat buffer
+
+- Added =ollama-buddy-auto-scroll= customization option (default: nil)
+- When nil, cursor stays in place during streaming output, allowing manual scrolling
+- When t, buffer auto-scrolls to follow new output (previous behavior)
+- Works with both network process and curl backends
+
 ** <2026-01-30 Thu> *1.1.2*
 
 Simplified chat interface
